--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,7 @@
 @import url('header.css');
 @import url('footer.css');
 @import url('grid.css');
+@import url('pagination.css');
 
 html {
   height: 100%;
@@ -13,25 +14,13 @@ body {
   color: var(--foreground);
   margin: 0;
   padding: 0;
-  min-height: 100%;
-}
-
-.page-container {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
 .main-content {
   flex: 1;
   max-width: 72rem;
   margin: 0 auto;
-  padding: 0 1rem 200px 1rem;
-  width: 100%;
-
-  @media (max-width: 768px) {
-    padding-bottom: 100px;
-  }
+  padding: 0 1rem 3.2rem 1rem;
 }
 
 a {
@@ -81,7 +70,6 @@ button {
 }
 
 input {
-  width: 100%;
   background: var(--background);
   color: var(--foreground);
   border: 1px solid var(--background-darkest);
